fixed images appearing too long

--- a/src/css/Fridge.styl
+++ b/src/css/Fridge.styl
@@ -28,8 +28,6 @@
 
 .alc-image-container
     width 100%
-    display flex
-    justify-content center
 
 img
     max-width 100%
