--- a/src/css/style.css
+++ b/src/css/style.css
@@ -437,12 +437,6 @@ h3 {
 }
 .alc-image-container {
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
 }
 img {
   max-width: 100%;
